--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,8 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1> Dating APP </h1>
 
-  <app-value></app-value>
 
-  <input type="text" value="ss" class="form-control"/>
-</div>
+<app-nav></app-nav>
+<!-- <app-value></app-value> -->
+<app-home></app-home>
