--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-dark  bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark  bg-primary">
+
+  <div class="container">
   <a class="navbar-brand" href="#">Dating App</a>
 
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto" *ngIf="loggedIn()">
       
       <li class="nav-item active">
         <a class="nav-link" href="#">Matches</a>
@@ -12,18 +14,16 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Messages</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" (click)="logOut()">LogOut</a>
-      </li>
     </ul>
 
+    <div  *ngIf="loggedIn()" class="dropdown" dropdown>
+      <a class="dropdown-toggle text-light" (click)="false" dropdownToggle> 
+        Welcome {{ authService.decodedToken?.unique_name | titlecase }} </a>
 
-    <div  *ngIf="loggedIn()" class="dropdown">
-      <a class="dropdown-toggle text-light"> Welcome User </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#"> Edit Profile</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" (click)="logOut()"><i class="fa fa-sign-out"></i> LogOut</a>
       </div>
     </div>
 
@@ -36,5 +36,5 @@
 
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
-
+  </div>
 </nav>
