Adding Photo upload functionality to the application

--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -17,6 +17,9 @@
     </ul>
 
     <div  *ngIf="loggedIn()" class="dropdown" dropdown>
+      <span>
+        <img src={{photoUrl}} alt="" class="rounded-circle">
+      </span>
       <a class="dropdown-toggle text-light" (click)="false" dropdownToggle> 
         Welcome {{ authService.decodedToken?.unique_name | titlecase }} </a>
 
