--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-4">
   <div class="card-img-wrappers">
     <img
-      src="{{ user.photoUrl }}"
+      src="{{ user.photoUrl || '../../../assets/user.png' }}"
       class="card-img-top"
       alt="{{ user.knownAs }}"
     />
