--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{photoUrl}}" 
+        <img class="card-img-top img-thumbnail" src="{{photoUrl || '../../../assets/user.png'}}" 
         alt="{{ user.knownAs }}"
         />
         <div class="card-body">
